# TerrariaProxChatPlugin

./: .gitignore  CMakeLists.txt  README.md  TerrariaPlugin.mumble_plugin  TerrariaProxChatPluginC.code-workspace  _tmodloader.c  manifest.xml  methods.h  terraria.cpp  tmodloader.c
include/: tmodloader.h
include/mumble/: MumbleAPI_v_1_0_x.h  MumblePlugin_v_1_0_x.h  methods.h
include/mumble/plugin/: MumblePlugin.h
